   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.55
 ============

 Released on 
  
 New features and improvements:

   - ofaGuidedInput: add a title to the dialog.
 
 Bug fixes:

   - 

 Other changes:

   - ofaPeriodClose: new dialog.

-----------------------------------------------------------------------
 Version 0.54
 ============

 Released on 2016-04-12
  
 New features and improvements:

   New formula engine.

   - DDL Core v 30
   - myIDialog: provides  a default error message.
   - myIWindow: improve size and position management (todo #1054).
   - myThousandCombo: new class for thousand separator selection.
   - ofaMainWindow: setup accelerators (todo #40).
   - ofaMainWindow: may display an image on a per-dossier basis (todo #669).
   - ofaMysql: implements ofaIAbout interface.
   - ofaMysql: implements ofaIProperties interface.
   - ofaExportAssistant: makes use of ofaStreamformatDisp (todo #1057).
   - ofaIDBModel, ofaCheckIntegrityBin, ofaImportAssistant: scroll textview when adding text (todo #1056).
   - ofaImport: save table before insertion, restoring it on error (todo #1061).
   - ofaPluginManager: displays instanciated objects (todo #1066).
   - ofaPluginManager: displays About page (todo #1066).
   - ofaPluginManager: displays Properties page (todo #1066).
   - ofaStreamFormat: remove 'has headers' indicator.
   - ofaStreamFormatBin: homogeneize character display (todo #1063).
   - ofaStreamFormatDisp: homogeneize character display (todo #1064).
   - ofoRecurrentModel: is exportable (todo #1048).
   - ofoRecurrentModel: is importable (todo #1049).
 
 Bug fixes:

   - my_isettings_free_string_list(), ofa_settings_free_string_list(): be NULL-tolerant.