@@ -472,7 +472,7 @@
                               <object class="GtkLabel" id="label21">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">Last closed exercice :</property>
+                                <property name="label" translatable="yes">Last closed period :</property>
                                 <property name="use_underline">True</property>
                                 <property name="xalign">1</property>
                               </object>
