@@ -34,6 +34,7 @@
  New features and improvements:
 
    - ofaGuidedInput: add a title to the dialog.
+   - ofaPeriodClose: let the period be closed independantly of the ledgers (todo #798).
  
  Bug fixes:
 
